add password reset button without logic

--- a/evoks/theme/templates/profile.html
+++ b/evoks/theme/templates/profile.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Profil</title>
+    <title>Profile</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -112,8 +112,7 @@
                                         <div class="grid grid-cols-6 gap-6 mt-5">
 
                                             <div class="col-span-6 sm:col-span-3">
-
-                                                <!-- This example requires Tailwind CSS v2.0+ -->
+                                                
                                                 <div class="bg-white shadow sm:rounded-lg">
                                                     <div class="px-4 py-5 sm:p-6">
                                                         <h3 class="text-lg leading-6 font-medium text-gray-900">
@@ -140,7 +139,7 @@
 
                                             <div class="col-span-6 sm:col-span-3">
 
-                                                <!-- This example requires Tailwind CSS v2.0+ -->
+                                                
                                                 <div class="bg-white shadow sm:rounded-lg">
                                                     <div class="px-4 py-5 sm:p-6">
                                                         <h3 class="text-lg leading-6 font-medium text-gray-900">
@@ -157,6 +156,28 @@
                                                                 class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-green-700 bg-green-100 hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:text-sm">
                                                                 Download data
                                                             </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-span-6 sm:col-span-3">
+                                                <div class="bg-white shadow sm:rounded-lg">
+                                                    <div class="px-4 py-5 sm:p-6">
+                                                        <h3 class="text-lg leading-6 font-medium text-gray-900">
+                                                            Change your password
+                                                        </h3>
+                                                        <div class="mt-2 max-w-xl text-sm text-gray-500">
+                                                            <p>
+                                                                You will get a link per email where you can change your password.
+                                                            </p>
+                                                        </div>
+                                                        <div class="mt-5">
+
+                                                            <button type="button" id="delete-account-button"
+                                                                class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-blue-700 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:text-sm">
+                                                                Change password
+                                                            </button>
+
                                                         </div>
                                                     </div>
                                                 </div>
