--- a/evoks/theme/templates/sidebars/desktop.html
+++ b/evoks/theme/templates/sidebars/desktop.html
@@ -2,7 +2,6 @@
 
 <div class="hidden md:flex md:flex-shrink-0">
     <div class="w-64 flex flex-col">
-        <!-- Sidebar component, swap this element with another sidebar if you like -->
         <div class="border-r border-gray-200 pt-5 pb-4 flex flex-col flex-grow overflow-y-auto">
             <div class="flex-shrink-0 px-4 flex items-center">
                 <img class="h-12 w-auto" src="{% static 'assets/logo.png' %}" alt="Evoks">
@@ -10,48 +9,20 @@
             </div>
             <div class="flex-grow mt-5 flex flex-col">
                 <nav class="flex-1 bg-white px-2 space-y-1">
-                    <!-- Current: "bg-gray-100 text-gray-900", Default: "text-gray-600 hover:bg-gray-50 hover:text-gray-900" -->
-                   
-                   
-                    {%if request.path == "/vocabularies/"%}
                     <a href="{% url 'base' %}"
-                        class="bg-gray-100 text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
-                        <svg class="text-gray-500 mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
-                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                        </svg>
-                        Dashboard
-                    </a>
-                    {%else%}
-                    <a href="{% url 'base' %}"
-                        class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
-                        <!-- Heroicon name: outline/users -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-3 flex-shrink-0 h-6 w-6"
+                        class="group rounded-md py-2 px-2 flex items-center text-sm font-medium {%if request.path == '/vocabularies/'%} bg-gray-100 text-gray-900 {%else%}text-gray-600 hover:bg-gray-50 hover:text-gray-900 {%endif%}">
+                        <svg class="mr-3 flex-shrink-0 h-6 w-6 {%if request.path == '/vocabularies'%} text-gray-500 {%else%} text-gray-400 group-hover:text-gray-500 {%endif%}"
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
+                                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                         </svg>
                         Dashboard
                     </a>
-                    {%endif%}
 
-                    {%if request.path == "/teams"%}
                     <a href="{% url 'team_list' %}"
-                        class="bg-gray-100 text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
-                        <svg class="text-gray-500 mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
-                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                        </svg>
-                        Teams
-                    </a>
-                    {%else%}
-                    <a href="{% url 'team_list' %}"
-                        class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
-                        <!-- Heroicon name: outline/users -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-3 flex-shrink-0 h-6 w-6"
+                        class="group rounded-md py-2 px-2 flex items-center text-sm font-medium {%if request.path == '/teams'%} bg-gray-100 text-gray-900 {%else%}text-gray-600 hover:bg-gray-50 hover:text-gray-900 {%endif%}">
+                        <svg class="mr-3 flex-shrink-0 h-6 w-6 {%if request.path == '/teams'%} text-gray-500 {%else%} text-gray-400 group-hover:text-gray-500 {%endif%}"
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -59,49 +30,27 @@
                         </svg>
                         Teams
                     </a>
-                    
-                    {%endif%}
-
-                    {%if request.path == "/help"%}
-                    <a href="{% url 'help' %}"
-                        class="bg-gray-100 text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
-                        <svg class="text-gray-500 mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
-                            fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                        </svg>
-                        Help
-                    </a>
-                    {%else%}
 
                     <a href="{% url 'help' %}"
-                        class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
-                        <!-- Heroicon name: outline/folder -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-3 flex-shrink-0 h-6 w-6"
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                            aria-hidden="true">
+                        class="group rounded-md py-2 px-2 flex items-center text-sm font-medium {%if request.path == '/help'%} bg-gray-100 text-gray-900 {%else%}text-gray-600 hover:bg-gray-50 hover:text-gray-900 {%endif%}">
+                        <svg class="mr-3 flex-shrink-0 h-6 w-6 {%if request.path == '/help'%} text-gray-500 {%else%} text-gray-400 group-hover:text-gray-500 {%endif%}"
+                            xmlns="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 
                         </svg>
-
-
                         Help
                     </a>
-                    {%endif%}
 
                     <a href="{% url 'ToS' %}"
-                        class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
-                        <!-- Heroicon name: outline/folder -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-3 flex-shrink-0 h-6 w-6"
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                            aria-hidden="true">
+                        class="group rounded-md py-2 px-2 flex items-center text-sm font-medium {%if request.path == '/ToS'%} bg-gray-100 text-gray-900 {%else%}text-gray-600 hover:bg-gray-50 hover:text-gray-900 {%endif%}">
+                        <svg class="mr-3 flex-shrink-0 h-6 w-6 {%if request.path == '/ToS'%} text-gray-500 {%else%} text-gray-400 group-hover:text-gray-500 {%endif%}"
+                            xmlns="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-
+                                d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
-
-
                         Terms of Service
                     </a>
 
