team detail and voc teams invite required

--- a/evoks/theme/templates/team_detail.html
+++ b/evoks/theme/templates/team_detail.html
@@ -176,7 +176,7 @@
                                                                 class="block text-sm font-medium text-gray-700">Invite a
                                                                 member</label>
                                                             <div class="mt-1">
-                                                                <input type="email" name="email" id="email" maxlength="254"
+                                                                <input type="email" name="email" id="email" maxlength="254" required='True'
                                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                                     placeholder="ontologyfan@student.kit.edu">
                                                             </div>
