--- a/evoks/theme/templates/vocabulary_members.html
+++ b/evoks/theme/templates/vocabulary_members.html
@@ -174,7 +174,7 @@
                                                         <h3 class="text-lg leading-6 font-medium text-gray-900">Invite a
                                                             new member or a group</h3>
                                                         <div class="mt-1">
-                                                            <input type="text" name="email" id="email" maxlength="254"
+                                                            <input type="text" name="email" id="email" maxlength="254" required='True'
                                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                                 placeholder="ontologyfan@student.kit.edu or KIT Ontologen 2">
                                                         </div>
