create name voc and team required

--- a/evoks/theme/templates/modals/create_team.html
+++ b/evoks/theme/templates/modals/create_team.html
@@ -27,9 +27,9 @@
                                         <div>
                                             <label for="team-name" class="block text-sm font-medium text-gray-700">Name</label>
                                             <div class="mt-1">
-                                                <input type="text" name="team-name" id="team-name" maxlength="30"
+                                                <input type="text" name="team-name" id="team-name" maxlength="30" required='True'
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                    placeholder="cooles_vokabular123">
+                                                    placeholder="Freunde der Ontologie">
                                             </div>
                                         </div>
                                     </div>
