Change Predicate to Predicate Prefix

--- a/evoks/theme/templates/modals/create_property.html
+++ b/evoks/theme/templates/modals/create_property.html
@@ -21,7 +21,7 @@
                             <div>
                                 <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
                                     <div>
-                                        <label for="prefix" class="block text-sm font-medium text-gray-700">Predicate</label>
+                                        <label for="prefix" class="block text-sm font-medium text-gray-700">Predicate Prefix</label>
                                         <div class="mt-1">
                                             <select id="prefix" name="prefix"
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md">
