--- a/evoks/theme/templates/modals/create_term.html
+++ b/evoks/theme/templates/modals/create_term.html
@@ -27,12 +27,14 @@
                                 <div>
                                     <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
                                         <div>
-                                            <label for="term-name"
-                                                class="block text-sm font-medium text-gray-700">Name</label>
-                                            <div class="mt-1">
-                                                <input type="text" name="term-name" id="text" maxlength="50" required
-                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                    placeholder="term123">
+                                            <label for="company-website" class="block text-sm font-medium text-gray-700">
+                                              Subject
+                                            </label>
+                                            <div class="mt-1 flex rounded-md shadow-sm">
+                                              <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">
+                                                {{vocabulary.urispace}}
+                                              </span>
+                                              <input type="text" name="term-subject" id="company-website" class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-r-md" placeholder="scene/010100">
                                             </div>
                                         </div>
                                         <div>
@@ -52,7 +54,7 @@
                     <div class="mt-5 sm:mt-6 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
                         <button type="submit" name="create-term"
                             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-regal-blue text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:col-start-2 sm:text-sm">
-                            Create
+                            Next
                         </button>
                         <button type="button" id="create-term-modal-cancel"
                             class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:mt-0 sm:col-start-1 sm:text-sm">
